# auto-citetion

./: .gitignore  LICENSE  README.md  auto_citetion.py  evaluate.py  example_config.json  pyproject.toml  search.py
src/auto_citetion/: __init__.py  __main__.py  cli.py  download_pdfs.py  evaluate.py  paper.py  scoring.py  search.py
src/auto_citetion/evaluator/: __init__.py  llm_evaluator.py
src/auto_citetion/output/: __init__.py  paper_files.py  report.py
src/auto_citetion/search/: __init__.py  arxiv_search.py  http.py  scholar_inbox.py  semantic_scholar.py
