[project]
name = "auto-citetion"
version = "0.1.0"
description = "Automated paper discovery and LLM-powered relevance evaluation for academic research"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "transformers>=4.51.0",
    "torch>=2.0.0",
    "accelerate>=1.0.0",
    "pillow>=10.0.0",
    "torchvision>=0.18.0",
]

[project.scripts]
auto-citetion = "auto_citetion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_citetion"]
