[project]
name = "auto-citetion"
version = "0.1.0"
description = "Automated paper discovery and LLM-powered citation evaluation"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Oguz Kolukisa" },
]
keywords = [
    "citation",
    "literature-review",
    "academic-search",
    "paper-discovery",
    "llm",
    "semantic-scholar",
    "arxiv",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "transformers>=4.51.0",
    "torch>=2.0.0",
    "accelerate>=1.0.0",
    "pillow>=10.0.0",
    "torchvision>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/oguz-kolukisa/auto-citetion"
Repository = "https://github.com/oguz-kolukisa/auto-citetion"
Issues = "https://github.com/oguz-kolukisa/auto-citetion/issues"

[project.scripts]
auto-citetion = "auto_citetion.cli:main"
download-pdfs = "auto_citetion.download_pdfs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_citetion"]
